# paipe

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: configuration.md  install.md
docs/cookbook/: clipboard.md
docs/guide/: json.md  unsupported_params.md
docs/operations/: filelist-to-md.md
paipe/: __init__.py  cli.py  main.py  models.py  profiles.py  util.py
paipe/mcp/: call.py  subcli.py
paipe/operations/: __init__.py  archive.py  base.py  filelist.py  subcli.py  website.py
paipe/providers/: openai.py
tests/: test_mcp.py
tests/fixtures/: dummy_mcp_server.py
