[project]
name = "paipe"
version = "0.1.3"
description = "A CLI tool for accessing the LLM API in the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai"
]

[project.urls]
homepage = "https://github.com/socrateslee/paipe"

[project.scripts]
paipe = "paipe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"