[project]
name = "paipe"
version = "0.1.16"
description = "A CLI tool for accessing the LLM API in the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim",
    "dydantic",
    "pyyaml"
]
classifiers = [
    "Environment :: Console",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Shells"
]

[project.optional-dependencies]
openai = ["pydantic-ai-slim[openai]"]
cohere = ["pydantic-ai-slim[cohere]"]
groq = ["pydantic-ai-slim[groq]"]
mistral = ["pydantic-ai-slim[mistral]"]
all = ["pydantic-ai"]

[project.urls]
homepage = "https://github.com/socrateslee/paipe"

[project.scripts]
paipe = "paipe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "docs/**",
    "paipe/**"
]

[tool.hatch.build.targets.wheel]
include = [
    "docs/**",
    "paipe/**"
]
